--- a/Untitled-1.ipynb
+++ b/Untitled-1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -16,12 +16,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hello World!\r\n"
+      "Hello World!\n",
+      "1\n"
      ]
     }
    ],
    "source": [
-    "Console.WriteLine(\"Hello World!\");"
+    "Console.WriteLine(\"Hello World!\");\n",
+    "\n",
+    "int password= 1;\n",
+    "Console.WriteLine(password);"
    ]
   }
  ],
